--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf dist/",
     "build:watch": "webpack --progress --colors --watch",
-    "build": "webpack --progress --colors",
+    "build:server": "webpack --progress --colors --config webpack.server.config.js",
+    "build:client": "webpack --progress --colors --config webpack.client.config.js",
+    "build": "npm run build:server && npm run build:client",
     "dev": "webpack-dev-server --progress --colors",
-    "start": "",
+    "start": "dist/server",
     "test": "ava"
   },
   "keywords": [],
@@ -15,6 +18,10 @@
   "license": "ISC",
   "dependencies": {
     "color": "^1.0.3",
+    "express": "^4.15.2",
+    "isomorphic-fetch": "^2.2.1",
+    "lowdb": "^0.16.0",
+    "pg": "^6.1.5",
     "react": "^15.4.2",
     "react-addons": "^0.9.1-deprecated",
     "react-addons-css-transition-group": "^15.4.2",
@@ -27,7 +34,12 @@
   "devDependencies": {
     "@types/chai": "^3.4.35",
     "@types/color": "^1.0.0",
+    "@types/express": "^4.0.35",
+    "@types/isomorphic-fetch": "0.0.33",
+    "@types/lowdb": "^0.15.0",
     "@types/mocha": "^2.2.40",
+    "@types/node": "^7.0.12",
+    "@types/pg": "^6.1.38",
     "@types/react": "^15.0.16",
     "@types/react-addons-css-transition-group": "^15.0.1",
     "@types/react-dom": "^0.14.23",
