fixed typescript loader issue by skipping type checks (dirty hack)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,8 @@
         "jsx": "react",
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true
+    },
+    "awesomeTypescriptLoaderOptions": {
+        "transpileOnly": true
     }
 }
