--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
 script:
   - npm run build
 after_script:
-  - heroku login
+  - /usr/local/heroku/bin/heroku login
   - cd dist/
   - git init
   - git config user.name "travis the integrator"
