--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ after_script:
 - echo "  login $HEROKU_USER" >> ~/.netrc
 - echo "  password $HEROKU_API_KEY" >> ~/.netrc
 - cd dist/
+- ls -rtl
 - git init
 - /usr/local/heroku/bin/heroku git:remote -a consol-100000000000
 - git add .
