--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:server": "webpack --progress --colors --config webpack.server.config.js",
     "build:client": "webpack --progress --colors --config webpack.client.config.js",
     "build": "npm run build:server && npm run build:client",
-    "dev": "webpack-dev-server --progress --colors",
+    "dev": "webpack-dev-server --progress --colors --config webpack.client.config.js",
     "start": "dist/server",
     "test": "ava"
   },
@@ -29,6 +29,7 @@
     "react-dom": "15.4.2",
     "react-motion": "0.4.7",
     "react-redux": "5.0.3",
+    "react-swipeable": "^3.9.2",
     "redux-saga": "0.14.3",
     "styled-components": "1.4.4"
   },
@@ -47,6 +48,7 @@
     "@types/react-dom": "0.14.23",
     "@types/react-motion": "0.0.21",
     "@types/react-redux": "4.4.37",
+    "@types/react-swipeable": "^3.3.7",
     "ava": "0.18.2",
     "awesome-typescript-loader": "3.1.2",
     "chai": "3.5.0",
