--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
 sudo: required
 before_script:
 - wget -qO- https://toolbelt.heroku.com/install.sh | sh
-script:
+- npm test
 - npm run build
 after_script:
 - echo "machine api.heroku.com" >> ~/.netrc
@@ -18,19 +18,16 @@ after_script:
 - echo "  login $HEROKU_USER" >> ~/.netrc
 - echo "  password $HEROKU_API_KEY" >> ~/.netrc
 - cd dist/
-- ls -rtl
 - git config --global user.email $HEROKU_USER
 - git config --global user.name "Travis the Integrator"
 - git init
 - /usr/local/heroku/bin/heroku git:remote -a consol-100000000000
 - git add .
-- git status
 - git commit -m "Deployment from `date`"
-- git status
-- echo "Host heroku.com" >> ~/.ssh/config
-- echo "   StrictHostKeyChecking no" >> ~/.ssh/config
-- echo "   CheckHostIP no" >> ~/.ssh/config
-- echo "   UserKnownHostsFile=/dev/null" >> ~/.ssh/config
-- /usr/local/heroku/bin/heroku keys:clear
-- yes | /usr/local/heroku/bin/heroku keys:add
+#- echo "Host heroku.com" >> ~/.ssh/config
+#- echo "   StrictHostKeyChecking no" >> ~/.ssh/config
+#- echo "   CheckHostIP no" >> ~/.ssh/config
+#- echo "   UserKnownHostsFile=/dev/null" >> ~/.ssh/config
+#- /usr/local/heroku/bin/heroku keys:clear
+#- yes | /usr/local/heroku/bin/heroku keys:add
 - yes | git push heroku master --force
